Add font styling

--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 * {
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: 'Raleway', sans-serif;
   --color-gray-100: hsl(270deg 25% 96%);
   --color-gray-300: hsl(270deg 17% 84%);
   --color-gray-500: hsl(270deg 17% 72%);
   --color-gray-700: hsl(270deg 12% 58%);
   --color-gray-900: hsl(270deg 22% 12%);
   --color-gray-1000: hsl(270deg 20% 8%);
+  --font-weight-regular: 400;
+  --font-weight-medium: 500;
+  --font-weight-bold: 700;
+  --font-weight-black: 900;
 }
 
 html,
@@ -41,12 +45,30 @@ footer {
 }
 
 .logo {
-  font-size: 2rem;
   margin-bottom: 16px;
+  font-size: 32px;
+  font-weight: var(--font-weight-black);
+}
+
+.sublogo {
+  font-weight: var(--font-weight-medium);
+  font-style: italic;
+
+  color: var(--color-gray-500);
+}
+
+.sublogo .person-name {
+  font-weight: var(--font-weight-bold);
+
+  color: var(--color-gray-300);
 }
 
 .legal {
   margin-top: auto;
+
+  font-weight: var(--font-weight-regular);
+
+  color: var(--color-gray-700);
 }
 
 .links {
@@ -58,6 +80,9 @@ footer {
   margin-bottom: 24px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  font-weight: var(--font-weight-bold);
+
+  color: var(--color-gray-700);
 }
 
 .links li {
@@ -70,6 +95,9 @@ footer {
 
 .links a {
   text-decoration: none;
+  font-weight: var(--font-weight-medium);
+
+  color: var(--color-gray-100);
 }
 
 main {
